@@ -1,8 +1,8 @@
 Package: quanteda
 Type: Package
 Title: Quantitative Analysis of Textual Data
-Version: 0.5.5.002
-Date: 2014-10-08
+Version: 0.5.5.003
+Date: 2014-10-110
 Authors@R: c(
     person("Benoit", "Kenneth", email = "kbenoit@lse.ac.uk", role = "cre"),
     person("Nulty", "Paul", email = "paul.nulty@gmail.com", role = "aut"))
