@@ -49,6 +49,7 @@ export("metacorpus<-")
 export("metadoc<-")
 export("settings<-")
 export("texts<-")
+export(as.dfm)
 export(bigrams)
 export(changeunits)
 export(clean)
