@@ -1,5 +1,6 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
 \name{dfm}
+\alias{as.dfm}
 \alias{dfm}
 \alias{dfm.character}
 \alias{dfm.corpus}
@@ -18,6 +19,8 @@ dfm(x, ...)
   dictionary_regex = FALSE, addto = NULL, ...)
 
 is.dfm(x)
+
+as.dfm(x)
 }
 \arguments{
 \item{x}{Corpus or character vector from which to generate the
@@ -71,9 +74,10 @@ of words by document, but the definition of "features" is entirely general.
 }
 \details{
 \code{is.dfm} returns \code{TRUE} if and only if its argument is a \link{dfm}.
+
+\code{as.dfm} coerces a matrix to a dfm
 }
 \examples{
-data(inaugCorpus)
 wfm <- dfm(inaugCorpus)
 
 ## by president, after 1960
@@ -81,7 +85,6 @@ wfmByPresfrom1900 <- dfm(subset(inaugCorpus, Year>1900), groups="President")
 docnames(wfmByPresfrom1900)
 
 ## with dictionaries
-data(inaugCorpus)
 mycorpus <- subset(inaugCorpus, Year>1900)
 mydict <- list(christmas=c("Christmas", "Santa", "holiday"),
                opposition=c("Opposition", "reject", "notincorpus"),
